...

export default class AddVehicle extends React.Component {
    constructor(props) {
        super(props);
        this.state = {
            vehicleOptions: {
                types: ['Bike', 'Car'],
                bikes: BikesJSON,
                cars: CarsJSON,
            },
            canSubmit: false,
            showDatePicker: false,
        };
...
                console.log('Add new vehicle!!');
                this.state = {
                    ...this.state,
                    selected: {
                        name: '',
                        type: '',
                        make: '',
                        model: '',
                        variant: '',
                        purchaseDate: '',
                    },
                    mode: 'create',
                };
                break;
            }
            case 'edit': {
...
        });
        if (Platform.OS === 'android') {
            pickerItems.unshift(
                <Picker.Item
                    key={-1}
                    value={''}
                    label={'Select Type'}
                    color={'lightgrey'}
                />,
            );
        }
        return pickerItems;
    }
...
        });
        if (Platform.OS === 'android') {
            pickerItems.unshift(
                <Picker.Item
                    key={-1}
                    value={''}
                    label={'Select Make'}
                    color={'lightgrey'}
                />,
            );
        }
        return pickerItems;
    }
...
        });
        if (Platform.OS === 'android') {
            pickerItems.unshift(
                <Picker.Item
                    key={-1}
                    value={''}
                    label={'Select Model'}
                    color={'lightgrey'}
                />,
            );
        }
        return pickerItems;
    }
...
        });
        if (Platform.OS === 'android') {
            pickerItems.unshift(
                <Picker.Item
                    key={-1}
                    value={''}
                    label={'Select Variant'}
                    color={'lightgrey'}
                />,
            );
        }
        return pickerItems;
    }
...
        realm.write(() => {
            let {mode} = this.state;
            let that = this;
            if (mode === 'create') {
                realm.create('vehicles', this.state.selected);
                Alert.alert(
                    'Success',
                    'Your vehicle added successfully',
                    [
                        {
                            text: 'Ok',
                            onPress: () =>
                                that.props.navigation.navigate('MyVehicles'),
                        },
                    ],
                    {cancelable: false},
                );
...
                let updatedVehicleInfo = Object.assign({}, this.state.selected);
                delete updatedVehicleInfo.name;
                Object.assign(vehicleDetails, updatedVehicleInfo);

                Alert.alert(
                    'Success',
                    'Your vehicle updated successfully',
                    [
                        {
                            text: 'Ok',
                            onPress: () => that.props.navigation.goBack(),
                        },
                    ],
...
    }

    showPurchaseDate() {
        let purchaseDate = this.state.selected.purchaseDate;
        if (purchaseDate) {
            let formattedDate = moment(purchaseDate).format('MMMM DD, YYYY');
            return <Text testID="PurchaseDate">{formattedDate}</Text>;
        } else {
            return (
                <Text testID="PurchaseDate" style={styles.placeholderStyle}>
                    Select Purchase Date
                </Text>
            );
        }
    }

    render() {
...
                    <View>
                        <Item>
                            <Label>
                                <Text>Name</Text>
                            </Label>
                            <Input
                                testID="VehicleName"
                                placeholder={'Pet name of vehicle'}
                                placeholderTextColor={'lightgrey'}
                                onChangeText={this.handleChange('name')}
                                value={selected.name}
                                editable={this.state.mode === 'create'}
                            />
...
                                enabled={selected.make !== ''}>
                                {this.modelOptions()}
                            </Picker>
                        </Item>
                        <Item picker>
                            <Label>
                                <Text>Variant</Text>
                            </Label>
                            <View testID="Variant">
                                <Picker
                                    testID="SelectVariant"
                                    mode="dropdown"
                                    iosIcon={<Icon name="arrow-down" />}
...
                                maximumDate={new Date()}
                                onConfirm={this.handleChange('purchaseDate')}
                                onCancel={this.hideDatePicker}
                            />
                        </Item>
                        <Button
                            testID="SubmitButton"
                            disabled={!this.state.canSubmit}
                            onPress={this.handleSubmit}
                            title="Submit"
                        />
                    </View>
                </Content>
...
