...
                                .toLowerCase()
                                .split(' ')
                                .join('')
                        }
                    />
                    <TouchableOpacity
                        testID="AddVehicleButton"
                        activeOpacity={0.7}
                        style={styles.touchableOpacityStyle}
                        onPress={() => {
                            this.props.navigation.navigate('AddVehicle', {
                                mode: 'create',
                                title: 'Add Vehicle',
                            });
                        }}>
                        <Image
                            source={Images.plusIcon}
                            style={styles.floatingButtonStyle}
                        />
...
